--- a/GamePadTests/GamePadTests.Android/GamePadTests.Android.csproj
+++ b/GamePadTests/GamePadTests.Android/GamePadTests.Android.csproj
@@ -11,11 +11,9 @@
     <MonoGameContentReference Include="..\GamePadTests.Core\Content\Content.mgcb" Link="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MonoGame.Source\MonoGame.Framework\MonoGame.Framework.Android.csproj" />
+    <ProjectReference Include="..\..\MonoGame.Source\Tools\MonoGame.Content.Builder.Task\MonoGame.Content.Builder.Task.csproj" />
     <ProjectReference Include="..\GamePadTests.Core\GamePadTests.Core.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
-    <PackageReference Include="MonoGame.Framework.Android" Version="3.8.*" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
