--- a/GamePadTests/GamePadTests.WindowsDX/GamePadTests.WindowsDX.csproj
+++ b/GamePadTests/GamePadTests.WindowsDX/GamePadTests.WindowsDX.csproj
@@ -15,11 +15,9 @@
     <MonoGameContentReference Include="..\GamePadTests.Core\Content\Content.mgcb" Link="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MonoGame.Source\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
+    <ProjectReference Include="..\..\MonoGame.Source\Tools\MonoGame.Content.Builder.Task\MonoGame.Content.Builder.Task.csproj" />
     <ProjectReference Include="..\GamePadTests.Core\GamePadTests.Core.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.*" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
